# YtbDownloader

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  script.py  streamlit.py  test.ipynb
.github/workflows/: .env  ruff.yml  unit_tests.yaml  upload_docker_images.yaml
_OLD/: requirements.txt
_OLD/architecture/app/: app_functions.py
_OLD/architecture/client-server/: docker-compose.yaml
_OLD/architecture/client-server/src/: script.py
app/src/: app.py  script.py
architecture/app/: Youtube-Downloader.spec  app.py  app.spec  compil windows.txt  requirements.txt
architecture/client-server/src/: script.py  streamlit.py
changelogs/: 0.1.0.md  0.2.0.md
deprecated/: streamlit.py
logs/User/: logs.txt
server/src/: script.py  streamlit.py
src/: Dockerfile  LoggerManager.py  YtbVideoDownloader.py  requirements.txt  script.py  streamlit.py
standalone/: script.py
test/: test_YtbVideoDownloader.py
